base/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frappe
  namespace: frappe
  annotations:
    cert-manager.io/cluster-issuer: "local-selfsigned"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - # hosts:
      #   - frappe.dairyndumberi.local
      secretName: frappe-tls
  rules:
    - # host: frappe.dairyndumberi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
